syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpccommon";
option java_outer_classname = "GeneratorProto2";
option objc_class_prefix = "RTG";

package service;


service TransactionService {
  rpc streamTransactions(AccountRequest) returns (stream TransactionDetailList);
  rpc StartChat (stream ChatMessage) returns (stream ChatResponse);
}


message ChatMessage {
  string sender = 1;
  string message = 2;
}

message ChatResponse {
  string sender = 1;
  string message = 2;
}


message AccountRequest {
  string account_number = 1;
  int32 duration_in_days = 2;
}

message TransactionDetail {
  string transaction_id = 1;
  string transaction_type = 2;
  float transaction_amount = 3;
}

message TransactionDetailList {
  repeated TransactionDetail transaction_details = 1;
}

message CustomError {
  string errorType = 1;
  string message = 2;
}